# Weir

./: .dockerignore  .env.example  .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  Dockerfile  MORPH-specs.txt  README.md  analysis-fixes.md  analysis-report.md  docker-compose.dev.yml  docker-compose.yml  mcp-auth.json  plan-args.md
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/extensions/conduct/: .extensionignore  .gitignore  CHANGELOG.md  LICENSE  README.md  conduct-config.template.yml  extension.yml  pyproject.toml
.specify/extensions/conduct/.devcontainer/: devcontainer.json
.specify/extensions/conduct/.github/agents/: copilot-instructions.md  speckit.conduct.run.agent.md  speckit.tasks.agent.md
.specify/extensions/conduct/.github/prompts/: speckit.conduct.run.prompt.md
.specify/extensions/conduct/.github/workflows/: release.yml
.specify/extensions/conduct/commands/: conduct.md
.specify/extensions/conduct/scripts/bash/: load.sh
.specify/extensions/conduct/scripts/powershell/: common.ps1  load.ps1
.specify/extensions/conduct/tests/: test_install.py
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
backend/: eslint.config.js  package-lock.json  package.json  tsconfig.json
docs/: architecture.md  development.md  revert-d66a261-report.md  speckit-prompts.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+249 files in other folders)
