[project]
name = "spec-kit-conduct-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Li-Xian Chen", email = "twbrandon7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.sources]
specify-cli = { git = "https://github.com/github/spec-kit.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "specify-cli",
]
